<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="100dp"
    android:layout_height="match_parent"
    android:gravity="center">
     <TextView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/hello"
         android:id="@+id/texthello"
         android:gravity="center"
         />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:textAllCaps="false"

        />
<LinearLayout
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"

    >
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/ok"
        android:textAllCaps="false"/>

</LinearLayout>
</LinearLayout>