<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.first.sab.collage.ProfileActivity">

    <View
        android:id="@+id/viewcollage2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/collage_icon"

        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >
    <TextView

        android:id="@+id/txtact2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/name"
        android:layout_margin="20dp"
        android:gravity="center"

        />
        <EditText
            android:id="@+id/txtact3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="...."
            android:background="@null"

            android:enabled="false"
            android:layout_margin="20dp"
            android:gravity="center"

            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >
        <TextView
            android:id="@+id/txtact4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/pass"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_gravity="center"

            />

        <EditText
            android:id="@+id/txtact5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="...."

            android:enabled="false"

            />
    </LinearLayout>
    <Button
        android:padding="15dp"
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/signin_shape"
        android:layout_gravity="center"
        />
    <Button
        android:padding="5dp"
        android:id="@+id/browser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browser"
        android:textAllCaps="false"
        android:layout_margin="5dp"

        android:textColor="@android:color/white"
        android:background="@drawable/signin_shape"
        android:layout_gravity="center"
        />
    <Button
        android:padding="15dp"
        android:id="@+id/dail_btn"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dail"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/signin_shape"
        android:layout_gravity="center"
        />

</LinearLayout>
