<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <View
        android:id="@+id/viewcollage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/collage_icon"

    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewcollage"
        android:layout_marginTop="70dp">

        <View
            android:id="@+id/viewrelative2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangel_shape"
            />

        <EditText
            android:id="@+id/collagetxt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/viewrelative2"
            android:layout_alignLeft="@+id/viewrelative2"
            android:layout_alignStart="@+id/viewrelative2"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="39dp"
            android:padding="10dp"
            android:background="@null"
            android:hint="@string/id" />

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/viewrelative2"
            android:layout_alignLeft="@+id/viewrelative2"
            android:layout_alignStart="@+id/viewrelative2"
            android:layout_margin="5dp"
            android:background="@drawable/id_card"
            android:id="@+id/view2" />

        <View
            android:layout_below="@id/viewrelative2"
            android:id="@+id/viewrelative3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangel_shape"
            />
        <EditText
            android:id="@+id/collagepass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/viewrelative3"
            android:layout_alignLeft="@+id/viewrelative3"
            android:layout_alignStart="@+id/viewrelative3"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="39dp"
            android:padding="10dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/pass" />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/viewrelative3"
            android:layout_alignRight="@+id/viewrelative3"
            android:layout_alignTop="@+id/viewrelative3"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_visibility_off_black_24dp"
            android:id="@+id/view" />

        <View
            android:layout_width="30dp"
            android:id="@+id/circle"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/view2"
            android:layout_alignRight="@+id/view2"
            android:layout_alignTop="@+id/view"
            android:background="@drawable/circle_shape" />

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/circle"
            android:layout_alignEnd="@+id/circle"
            android:layout_alignRight="@+id/circle"
            android:background="@drawable/ic_vpn_key_black_24dp"
            android:rotation="-30"
            android:layout_margin="3dp"/>
       <LinearLayout
           android:id="@+id/liner4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/viewrelative3"
           android:orientation="horizontal"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/remember"
               android:textSize="18sp"
               android:layout_below="@id/viewrelative3"
               android:layout_marginLeft="10dp"
               />

           <Switch
               android:layout_width="wrap_content"
               android:layout_marginLeft="220dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@null"/>

       </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:layout_below="@id/liner4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="35dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:background="@drawable/signin_shape"
            android:textColor="@android:color/white"
            android:id="@+id/textView" />

        <View
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"

            android:background="@drawable/ic_chevron_right_black_24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:textSize="12dp"
            android:text="@string/forgetpass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>




    </RelativeLayout>

</RelativeLayout>